feat: add pin logic

--- a/src/languages/pt_BR.json
+++ b/src/languages/pt_BR.json
@@ -18,6 +18,9 @@
         "Title": "Titulo",
         "Active": "Ativo",
         "Inactive": "Inativo",
+        "Fixed Link": "Link Fixado",
+        "Yes": "Sim",
+        "No": "Não",
         "Filter": "Filtrar",
         "Add Link": "Adicionar Link",
         "No Results": "Nenhum Resultado",
