feat: some layout improves

--- a/src/languages/pt_BR.json
+++ b/src/languages/pt_BR.json
@@ -52,6 +52,13 @@
         "Manage your preferences here.": "Gerenciar suas preferências aqui",
         "Enable Search": "Habilitar Busca",
         "With search, your users can filter your links by link title": "Com a busca, seus usuários pode filtrar seus links pelo seu título",
+        "Show Number": "Mostrar Número do Link",
+        "Show link number in bio (Before, After, Badge) - Ex: #1": "Mostrar número do Link na Bio (Antes, Depois ou Balão) - Ex: #1",
+        "Off": "Desligado",
+        "Before": "Antes",
+        "After": "Depois",
+        "Badge Left": "Balão na Esquerda",
+        "Badge Right": "Balão na Direita",
         "Save Preferences": "Salvar Preferências",
         "Search Links, Products": "Procurar Links, Produtos",
         "Share this Page": "Compartilhar esta Página",
