feat: add new bio layout config

--- a/src/languages/pt_BR.json
+++ b/src/languages/pt_BR.json
@@ -55,6 +55,10 @@
         "Show Number": "Mostrar Número do Link",
         "Show link number in bio (Before, After, Badge) - Ex: #1": "Mostrar número do Link na Bio (Antes, Depois ou Balão) - Ex: #1",
         "Off": "Desligado",
+        "Bio Layout": "Layout da Bio",
+        "Change your Bio Layout to better serve your users": "Alterar o Layout da Bio para melhor atender seus usuários",
+        "List": "Lista",
+        "Grid": "Grade",
         "Before": "Antes",
         "After": "Depois",
         "Badge Left": "Balão na Esquerda",
