feat: helmet for dynamic meta tags

--- a/src/languages/pt_BR.json
+++ b/src/languages/pt_BR.json
@@ -59,6 +59,7 @@
         "Change your Bio Layout to better serve your users": "Alterar o Layout da Bio para melhor atender seus usuários",
         "List": "Lista",
         "Grid": "Grade",
+        "Connect your Pinterest to your Bio, need to add TXT Record to your domain": "Conecte seu Pinterest à sua Bio, também precisa adicionar um registro TXT no seu domínio",
         "Before": "Antes",
         "After": "Depois",
         "Badge Left": "Balão na Esquerda",
