feat: add range filter to overview

--- a/src/languages/pt_BR.json
+++ b/src/languages/pt_BR.json
@@ -70,6 +70,7 @@
         "Share this link via": "Compartilhar este link via",
         "Or copy link": "Ou copiar o link",
         "Copy": "Copiar",
-        "Copied": "Copiado"
+        "Copied": "Copiado",
+        "Pick a date": "Escolha uma data"
     }
 }
