feat: added copy short_url to links admin

--- a/src/languages/pt_BR.json
+++ b/src/languages/pt_BR.json
@@ -71,6 +71,7 @@
         "Or copy link": "Ou copiar o link",
         "Copy": "Copiar",
         "Copied": "Copiado",
+        "Link copied to clipboard": "Link copiado para área de transferência",
         "Pick a date": "Escolha uma data",
         "Collections": "Coleções",
         "Add Collection": "Adicionar Coleção",
